# pipelines-utils-rdkit

./: .gitignore  .travis.yml  README.md  example-requirements.txt  package-requirements.txt  requirements.txt
.github/workflows/: build.yaml  publish.yaml
mock-rdkit/: README.rst  setup.cfg  setup.py
mock-rdkit/rdkit/: Chem.py
src/python/: README.rst  requirements.txt  setup.cfg  setup.py
src/python/pipelines_utils_rdkit/: filter.py  filter.test  rdkit_utils.py  sdf2json.py  sdf2json.test  splitter.py  splitter.test
