[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support.
universal = 1

[metadata]
description-file = README.rst

[coverage:run]
# Code coverage 'run' configuration
omit =
    .eggs/*
    test/*
    */site-packages/*
    */distutils/*
    setup.py

[coverage:report]
# Code coverage 'report' configuration
precision = 1
sort = Cover
